Attempt to fix blog page width on mobile devices

--- a/static/site.css
+++ b/static/site.css
@@ -398,7 +398,7 @@ svg.icon {
 
 table {
     table-layout: fixed;
-    width: max(600px, 100%);
+    width: clamp(100%, 80vw, 1200px);
     margin: 10px auto;
     border-collapse: collapse;
     border-top: 1px solid var(--secondary-color);
